--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,8 @@
 # Set the “alt-php80” package as the default “PHP” programming language.
 <IfModule mime_module>
   AddHandler application/x-httpd-alt-php80 .php .php8 .phtml
+  RewriteEngine On 
+RewriteCond %{HTTPS} off 
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </IfModule>
 # php -- END cPanel-generated handler, do not edit
